// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`array > ignores unknown checker 1`] = `
{
  "$ref": "#/definitions/ArraySchemaUnknown",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ArraySchemaUnknown": {
      "items": {
        "type": "string",
      },
      "type": "array",
    },
  },
}
`;

exports[`array > renders items and constraints 1`] = `
{
  "$ref": "#/definitions/ArraySchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ArraySchema": {
      "items": {
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
  },
}
`;

exports[`array > renders max constraint 1`] = `
{
  "$ref": "#/definitions/ArraySchemaMax",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ArraySchemaMax": {
      "items": {
        "type": "string",
      },
      "maxItems": 2,
      "type": "array",
    },
  },
}
`;
